Alteração da tag <p> para <h1>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello, world!</title>
 </head>
 <body>
-    <p>Meu primeiro código HTML versionado com GIT</p>
+    <h1>Meu primeiro código HTML versionado com GIT</h1>
 </body>
 </html>
